--- a/css/style.css
+++ b/css/style.css
@@ -522,17 +522,23 @@ li {
   border-radius: 20%;
   width: 25px;
   height: 25px;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   z-index: 999;
   transition: all 0.3s;
-  opacity: 0;
+  /* opacity: 0; */
+
 }
 
 .scroll-top i {
   margin: 0 !important;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
+
 
 .scroll-top:hover {
   transform: scale(1.2);
